--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "Ryan Morimoto",
+  "name": "gatsby-starter-saas-marketing",
   "private": true,
   "description": "Clarify Your Purpose, Sustain Habit Change, Reflection, Accountability",
   "version": "0.1.0",
   "author": "Ryan Morimoto",
   "dependencies": {
+    "@rafaelquintanilha/gatsby-theme-countdown": "^1.0.10",
     "gatsby": "^2.15.31",
     "gatsby-image": "^2.2.24",
     "gatsby-plugin-manifest": "^2.2.20",
     "gatsby-plugin-offline": "^3.0.12",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.1.10",
+    "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-sharp": "^2.2.28",
     "gatsby-plugin-styled-components": "^3.1.8",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.1.29",
     "gatsby-transformer-sharp": "^2.2.20",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
